--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,308 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body{
+  overflow-y:auto;
+  overflow-x: hidden;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.header-title{
+  font-weight: 900;
+  font-size: 50px;
+  color: rgb(90, 214, 90);
+}
+h1 {
+  -webkit-text-stroke: 2px black;
+}
+.header-title:hover{
+  animation-name: headerAnimate;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
+}
+
+@keyframes headerAnimate{
+  0%{transform: rotate(10);
+     color: rgb(90, 214, 90);}
+  10%{color: blue;}
+  20%{color: red;}
+  30%{color: pink;}
+  40%{color: rgb(169, 60, 169);}
+  50%{color: rgb(69, 69, 69);}
+  60%{color: lime;}
+  70%{color: aqua;}
+  80%{color: white;}
+  90%{color: rgb(90, 214, 90);
+      transform: none;}
+}
+.find-title{
+  transition: 2s;
+}
+.body-container {
+  /* overflow: auto; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  box-sizing : border-box;
+  background-color: rgb(218, 228, 88);
+  transition: 2s;
+}
+.dark_body_color{
+  background-color: rgb(38, 223, 205);
+  transition: 2s;
+}
+.body-content-color{
+  background-color: #d9d0b1;
+  transition: 2s;
+}
+.dark_body_content{
+  background-color: #0c0c35;
+  transition: 2s;
+}
+.content-color{
+  background-color: rgb(213, 236, 43);
+  transition: 2s;
+}
+.dark_content_color{
+  background-color: rgb(35, 116, 104);
+  transition: 2s;
+}
+.selectBtn{
+  background-color: rgb(255, 255, 0);
+  transition: 2s;
+}
+.selectBtn:hover{
+  background-color: rgb(216, 216, 0);
+  transition: 2s;
+}
+.dark_select{
+  background-color: rgb(205, 174, 0);
+  transition: 2s;
+}
+.dark_select:hover{
+  background-color: rgb(174, 148, 2);
+  transition: 2s;
+}
+body {
+  /* background-color: rgb(243, 162, 162); */
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  height: auto;
+  width: auto;
+}
+#root{
+  width: 100%;
+  height: 100%;
+}
+.real_body{
+  background-color: #dee4e7;
+  width: 1256.5px;
+  height: 5000px;
+  transition: 1s;
+  flex-direction: column;
+}
+
+.header-container{
+  width: 100%;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: space-between;
+  /* transform: none; */
+  /* margin: 30px auto;
+  margin-top: 0px;
+  margin-bottom: 0px; */
+  height: 80px;
+  /* min-height: 100px; */
+  /* border: 1px solid steelblue; */
+  background-color: rgb(241, 194, 106);
+  padding: 0 2rem;
+  z-index: 999;
+  transition: 1s;
+  /* position: fixed; */
+  /* border-radius: 5px; */
+}
+
+.dark_mode_header{
+  background-color: #1B1A55;
+  color: white;
+}
+
+/* .navbar-container {
+  display: inline-block;
+  background-color: rgb(159, 72, 72);
+  border-radius: 10px;
+  margin-top: 20px;
+} */
+
+.picture{
+  margin-top: 80px;
+  width: 100%;
+  height: 100%;
+}
+
+h1{
+  color: rgb(66, 197, 66);
+  margin-bottom: 10px;
+  z-index: 999;
+  margin-right: auto;
+}
+
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /* margin-right: 50px; */
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.navBtn{
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: black;
+  display: none;
+  opacity: 0;
+}
+
+/* .btn:hover{
+  background-color: gray;
+} */
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+
+@media only screen and (max-width: 1024px){
+  .header-container .navBtn{
+    display: inline;
+    opacity: 1;
+  }
+
+  .header-container nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: rgb(241, 194, 106);
+    transition: 1s;
+    transform: translateY(-100vh);
+  }
+  
+  .header-container nav.dark_mode_nav{
+    background-color: #1B1A55;
+    color: white;
+  }
+
+  .header-container nav.responsive_nav{
+    transform: none;
+  }
+  nav{
+    flex-direction: column;
+  }
+
+  nav .navClose{
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+}
+.body-container{
+  position: absolute;
+  top: 80px;
+  width: 90%;
+  left: 5%;
+  margin-inline: auto;
+  padding: 2em;
+  top: 100px;
+}
+.about{
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  height: 1000px;
+  border: 2px inset black;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 1s;
+}
+h2{
+  margin-bottom: 10px;
+}
+
+/* dark & light mode button */
+.standard_button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+  background-color: black;
+  color: white;
+  border: 1px outset lightgrey;
+  border-radius: 10px;
+  font-weight: bold;
+  z-index: 1000;
+  position: fixed;
+  top: 90px;
+  left: 10px;
+  transition: 1s;
+
+}
+.dark_mode{
+  background-color: #070F2B;
+  color: white;
+}
+.dark_mode_content{
+  background-color: #1B1A55;
+  color: white;
+  border: 1px outset white;
+}
+.dark_mode_button{
+  background-color: white;
+  color: black;
+  border: 1px inset grey;
+}
+.header-container nav .dark_mode_nav{
+  background-color: #1B1A55;
+  color: white;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +310,93 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.play-container {
+  background-color: rgb(120, 119, 119);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  bottom: 8px;
+  margin: auto;
+  max-width: fit-content;
+  border: 5px solid black;
+  border-radius: 10px;
+  min-width: 25%;
+  transition: 1s;
+  z-index: 1000;
+}
+.play-title{
+  color: white;
+  margin-bottom: 10px;
+}
+.navigation{
+  width: 100%;
+  margin-bottom: 15px;;
+}
+.navigation_wrapper{
+  min-width: 100%;
+  background-color: rgba(255, 255, 255, 0.781);
+  height: 5px;
+  border-radius: 30px;
+  cursor: pointer;
+}
+.seek_bar{
+  width: 0;
+  height: 100%;
+  background-color: rgb(246, 246, 63);
+  border-radius: 30px;
+}
+.controls_button{
+  font-size: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  transition: 0s;
+}
+.controls_button:hover{
+  color: rgb(179, 179, 179);
+}
+.controls_button:active{
+  color: rgb(62, 62, 62);
+}
+.miniBtn{
+  position: absolute;
+  right: 15px;
+  top: 5px;
+  transition: 0s;
+}
+.hide-container{
+  transform: translateY(100vh);
+  transition: 3s;
+}
+.hidden-icon{
+  /* display: none; */
+  background-color: white;
+  font-size: 35px;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  background-color: transparent;
+  z-index: 1000;
+}
+.hidden-icon:hover{
+  color: rgb(179, 179, 179);
+
+}
+.miniBtn:hover{
+  color: rgb(179, 179, 179);
+}
+.btn:hover{
+  background-color: rgb(37, 37, 37);
 }
